# HypoArgus

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  HANDOFF-slice6.md  README.md  REAL_DATA_TESTING_LOG.md  prd.md  prd_v1.0.md  prd_v2.0.md  pyproject.toml  raw_prd.md
.claude/: settings.local.json
.sandcastle/: CODING_STANDARDS.md  implement-prompt.md  main.mts  review-prompt.md
config/: visibility.yaml
docs/: DEVELOPMENT.md  PRD-pipeline-restructure.md  STATE.md  TESTING.md  adding-an-agent.md  graph_utils.py  langgraph-dev-guide.md  pipeline-restructure-tasks.md  prd-paragraph-aggregate-root.md  prd-search-agent-integration.md
docs/adr/: 0001-paragraph-as-atomic-rewrite-unit.md  0002-optimistic-speculative-hypothesis-generation.md  0003-impact-propagation-is-serial-and-textless.md  0004-revision-writeback-replace-vs-append-by-nodetype.md  0005-two-layer-storage-raw-store-vs-tree.md  0006-merge-decision-matrix.md  0007-hypothesis-relation-classification.md  0008-hypothesis-explicit-status-enum.md  0009-deterministic-lossless-paragraph-partition.md  0010-hitl2-is-mandatory-gate.md  0011-status-machine-finalization.md  0012-consistency-check-single-pass-pre-hitl2.md  0013-argument-weight-and-invalidation-formula.md  0014-package-restructure-infra-agents-runtime.md  0015-tool-framework-seam-skeleton-port.md  0016-history-seam-source-list-partial-graphutils-fusion.md  0017-pipeline-refactor-slices-1-6.md  0017-rewrite-stage-abandons-byte-identity-idempotent-writeback.md  0018-hitl1-redefined-as-partition-gate-bounded-replay.md  0019-five-into-one-judgment-node.md  0020-partition-becomes-prompt-driven.md  0021-through-state-in-pipeline-state.md  0022-async-hitl-via-interrupt-postgres-saver.md  0023-display-layer-read-only-trace-events-tail.md  0024-http-control-plane-fastapi-and-document-field.md  0025-paragraph-as-aggregate-root.md  0026-real-retrieval-backend-via-searchagent-v12.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/contracts/: parse-partition-node.md  retrieval-node.md
docs/tasks/: README.md  T-01-split-hitl-gate-seam.md  T-02-manifest-display-metadata-visibility.md  T-03-durable-async-hitl-interrupt-postgres-saver.md  T-04-http-control-plane.md  T-05-translation-layer-trace-events.md  T-06-ws-sender-read-only-tail.md  T-07-react-workbench.md  T-08-ops-hardening.md  paragraph-aggregate-root.md
docs/tasks/search-agent-integration/: INDEX.md  task-00-vendor-and-carve-out.md  task-01-widen-retrieval-seam.md  task-02-real-retrieval-adapter.md  task-03-real-llm-full-link-tests.md  task-04-adr-and-docs.md
e2e/: _fakes.py  dev_server.py
scripts/: dev-serve.sh
src/: domain.py  original_paragraphs.py  partition.py  raw_store.py  status_machine.py  tree_invariants.py
src/agents/: assembly.py  consistency.py  hitl1.py  hitl2.py  hypothesis.py  impact.py  merge.py  parser.py  verification.py  writeback.py
src/agents/hitl1/: __init__.py  agent.py  contract.py
src/agents/hitl2/: __init__.py  agent.py  contract.py
src/agents/hypothesis/: __init__.py  agent.py  contract.py
src/agents/judgment/: __init__.py  agent.py  contract.py
src/agents/parser/: __init__.py  agent.py  contract.py
src/agents/retrieval/: __init__.py  agent.py  contract.py
src/agents/rewrite_loop/: __init__.py  agent.py  contract.py
src/agents/verification/: __init__.py  (+2 more)
src/api_layer/: __init__.py  app.py  errors.py  graph_view.py  langfuse_wrap.py  logging_setup.py  metrics.py  ops.py  redaction.py  run.py  schema.sql  server.py  session_cache.py  trace_events.sql  trace_store.py  translator.py  ws.py
src/hypoargus/: __init__.py  agents.py  consistency.py  domain.py  hitl1.py  hitl2.py  impact.py  merge.py  orchestrator.py  parser.py  partition.py  raw_store.py  retrieval.py  tree_invariants.py  writeback.py
src/infra/: history.py  llm_adapters.py  llm_provider.py  observability.py  retrieval_tool.py  tool_protocol.py
src/runtime/: checkpoint.py  cli_gates.py  gates.py  orchestrator.py  run_real.py
tests/: conftest.py  real_papers.py  test_api_http_integration.py  test_api_run.py  test_api_run_translation.py  test_cancel_orphan.py  test_checkpoint.py  test_cli_render.py  test_consistency.py  test_e2e_real_langfuse.py  test_gates.py  test_graph_view.py  test_history.py  test_hitl1.py  test_hitl2.py  test_hypothesis.py  test_impact.py  test_langfuse_wrap.py  test_logging_setup.py  test_merge.py  test_metrics.py  test_observability.py  test_ops_integration.py  test_ops_latency.py  test_ops_service.py  test_ops_session_limit.py  test_orchestrator_e2e.py  test_orchestrator_fallback.py  test_orchestrator_interrupt.py  test_orchestrator_resume.py  test_orchestrator_topology.py  test_original_paragraphs.py  test_paragraph_list.py  test_parser.py  test_partition.py  test_raw_store.py  test_real_llm_parse.py  test_real_llm_pipeline_e2e.py  test_real_llm_wiring.py  test_real_retrieval_e2e.py  (+17 more)
tmp/: raw_prd.md  tmp.md
web/: .gitignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web/e2e/: workbench.spec.ts
web/src/: App.tsx  prompts.ts  sessions.ts  styles.css  types.ts
(+48 files in other folders)
