[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hypoargus"
version = "0.1.0"
description = "论证驱动型文档修订多智能体系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "langgraph>=1.2",
    "pydantic>=2.0",
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
