[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hypoargus"
version = "0.1.0"
description = "论证驱动型文档修订多智能体系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]

[project.optional-dependencies]
dev = [
    "langgraph>=1.2",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools]
# 扁平 src 布局（ADR-0014）：src/ 为包根，顶层裸名导入。
package-dir = {"" = "src"}
# 顶层裸模块（domain core 平铺于 src/ 根，不入子包）。
py-modules = ["domain", "partition", "raw_store", "status_machine", "tree_invariants"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
# 扁平 src 布局：mypy 从 src/ 解析顶层裸名（domain/agents/infra/runtime）。
mypy_path = "src"
