[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hypoargus"
version = "0.1.0"
description = "论证驱动型文档修订多智能体系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2",
    "pydantic>=2.7",
    "langchain-core>=1.3",
    "langchain>=1.3",
    "langchain-openai>=1.3",
    "langchain-anthropic>=1.4",
    "langfuse>=4.14",
    "httpx>=0.27",
    "jinja2",
    "requests",
    "ddgs",
    "python-dotenv",
    "sentence-transformers>=3,<4",
    "pypdf>=4",
    "pyyaml>=6.0",
    # T-04 HTTP 控制面（ADR-0024）：async-native web 框架 + Postgres checkpointer + side-meta 驱动。
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "langgraph>=1.2",
    "pydantic>=2.7",
    "langchain-core>=1.3",
    "langchain>=1.3",
    "langchain-openai>=1.3",
    "langchain-anthropic>=1.4",
    "langfuse>=4.14",
    "httpx>=0.27",
    "jinja2",
    "requests",
    "ddgs",
    "python-dotenv",
    "sentence-transformers>=3,<4",
    "pypdf>=4",
    "pyyaml>=6.0",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.setuptools]
# 扁平 src 布局（ADR-0014）：src/ 为包根，顶层裸名导入。
package-dir = {"" = "src"}
include-package-data = true
# 顶层裸模块（domain core 平铺于 src/ 根，不入子包）。
py-modules = ["domain", "original_paragraphs", "partition", "status_machine", "tree_invariants"]

[tool.setuptools.packages.find]
# `src/` 发现主仓顶层裸包；`src/infra/search_agent_vendor/` 让 vendored 子智能体
# 以 `search_agent` 顶层包被发现（V12 内部全用相对导入，故只需 `search_agent` 顶层）。
where = ["src", "src/infra/search_agent_vendor"]

[tool.setuptools.package-data]
# schema.sql 随 api_layer 包分发，供 PostgresSessionCache.setup() 经 importlib.resources 读。
api_layer = ["*.sql"]
# vendored SearchAgent V12 数据文件（judge prompt / JSON schema / 示例）随包分发。
"search_agent.evidence_retrieval" = ["prompts/*.txt", "json_schemas/*.json", "examples/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "real_llm: tests that call the real DashScope LLM (skipped without DASHSCOPE_API_KEY)",
]

[tool.ruff]
line-length = 99
target-version = "py311"
# vendored SearchAgent V12 源码作 third-party carve-out，不进 ruff。
exclude = ["src/infra/search_agent_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
# 扁平 src 布局：mypy 从 src/ 解析顶层裸名（domain/agents/infra/runtime）。
mypy_path = "src"
# vendored SearchAgent V12 源码作 third-party carve-out，不进 strict 门。
exclude = ["src/infra/search_agent_vendor/"]

# vendored search_agent 作 third-party untyped（carve-out）：mypy_path 不含 vendor 根，
# 故按「无 stub 的第三方库」处理——search_agent.* 符号对严格门为 Any；适配器代码显式
# model_validate / cast 收口类型。避免解析 50+ vendored 文件、不把其内部标注拖进 strict 门。
[[tool.mypy.overrides]]
module = "search_agent.*"
ignore_missing_imports = true
